added day of week feature to data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -113,17 +113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add a column for the day of the week\n",
+    "df['day_of_week'] = df.index.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     wait_time_minutes\n",
-      "2023-01-01 00:00:00                 67\n",
-      "2023-01-01 01:00:00                 64\n",
-      "2023-01-01 02:00:00                 56\n"
+      "                     wait_time_minutes day_of_week\n",
+      "2023-01-01 00:00:00                 67      Sunday\n",
+      "2023-01-01 01:00:00                 64      Sunday\n",
+      "2023-01-01 02:00:00                 56      Sunday\n"
      ]
     }
    ],
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
