adjusted data range for one year

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up the date range\n",
-    "idx = pd.date_range(start='2023-01-01', end='2023-01-07', freq=\"h\")"
+    "# Set up the date range for the year\n",
+    "idx = pd.date_range(start='2023-01-01', end='2023-12-31', freq=\"h\")"
    ]
   },
   {
