added day or night data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -192,7 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Day or Night feature\n",
+    "def day_or_night(hour):\n",
+    "    if 7 <= hour < 19:\n",
+    "        return 'Day'\n",
+    "    else:\n",
+    "        return 'Night'\n",
+    "\n",
+    "df['day_or_night'] = df.index.hour.map(day_or_night)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -211,17 +227,17 @@
       "2023-01-01 08:00:00                 50      Sunday  Winter           1   \n",
       "2023-01-01 09:00:00                 52      Sunday  Winter           1   \n",
       "\n",
-      "                     is_full_moon  \n",
-      "2023-01-01 00:00:00             0  \n",
-      "2023-01-01 01:00:00             0  \n",
-      "2023-01-01 02:00:00             0  \n",
-      "2023-01-01 03:00:00             0  \n",
-      "2023-01-01 04:00:00             0  \n",
-      "2023-01-01 05:00:00             0  \n",
-      "2023-01-01 06:00:00             0  \n",
-      "2023-01-01 07:00:00             0  \n",
-      "2023-01-01 08:00:00             0  \n",
-      "2023-01-01 09:00:00             0  \n"
+      "                     is_full_moon day_or_night  \n",
+      "2023-01-01 00:00:00             0        Night  \n",
+      "2023-01-01 01:00:00             0        Night  \n",
+      "2023-01-01 02:00:00             0        Night  \n",
+      "2023-01-01 03:00:00             0        Night  \n",
+      "2023-01-01 04:00:00             0        Night  \n",
+      "2023-01-01 05:00:00             0        Night  \n",
+      "2023-01-01 06:00:00             0        Night  \n",
+      "2023-01-01 07:00:00             0          Day  \n",
+      "2023-01-01 08:00:00             0          Day  \n",
+      "2023-01-01 09:00:00             0          Day  \n"
      ]
     }
    ],
