--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -398,6 +398,96 @@
     "# Check the average wait time in the generated data\n",
     "print(\"Average Wait Time:\", df[\"wait_time_minutes\"].mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-Test Full Moon vs Non-Full Moon:\n",
+      "T-Statistic: 0.47566830013423883\n",
+      "P-Value: 0.63766865839192\n",
+      "There is no significant difference in wait times between full moon and non-full moon days.\n",
+      "\n",
+      "\n",
+      "ANOVA Test for Seasons:\n",
+      "F-Statistic: nan\n",
+      "P-Value: nan\n",
+      "There is no significant difference in wait times between different seasons.\n",
+      "\n",
+      "\n",
+      "ANOVA Test for Day vs Night:\n",
+      "F-Statistic: 3.288590046835575\n",
+      "P-Value: 0.07185980308945802\n",
+      "There is no significant difference in wait times between day and night.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sophieboyle/Documents/Final-Year-Project/.venv/lib/python3.9/site-packages/scipy/stats/_stats_py.py:4102: DegenerateDataWarning: at least one input has length 0\n",
+      "  if _f_oneway_is_too_small(samples):\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind, f_oneway\n",
+    "\n",
+    "# Step 3.1: T-Test for Full Moon vs Non-Full Moon\n",
+    "full_moon_wait_times = df[df['is_full_moon'] == 1]['wait_time_minutes']\n",
+    "non_full_moon_wait_times = df[df['is_full_moon'] == 0]['wait_time_minutes']\n",
+    "\n",
+    "t_stat, p_value = ttest_ind(full_moon_wait_times, non_full_moon_wait_times, equal_var=False)\n",
+    "print(\"T-Test Full Moon vs Non-Full Moon:\")\n",
+    "print(\"T-Statistic:\", t_stat)\n",
+    "print(\"P-Value:\", p_value)\n",
+    "if p_value < 0.05:\n",
+    "    print(\"There is a significant difference in wait times between full moon and non-full moon days.\")\n",
+    "else:\n",
+    "    print(\"There is no significant difference in wait times between full moon and non-full moon days.\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Step 3.2: ANOVA for Season Comparison\n",
+    "winter_wait_times = df[df['season'] == 'Winter']['wait_time_minutes']\n",
+    "spring_wait_times = df[df['season'] == 'Spring']['wait_time_minutes']\n",
+    "summer_wait_times = df[df['season'] == 'Summer']['wait_time_minutes']\n",
+    "autumn_wait_times = df[df['season'] == 'Autumn']['wait_time_minutes']\n",
+    "\n",
+    "f_stat, p_value = f_oneway(winter_wait_times, spring_wait_times, summer_wait_times, autumn_wait_times)\n",
+    "print(\"ANOVA Test for Seasons:\")\n",
+    "print(\"F-Statistic:\", f_stat)\n",
+    "print(\"P-Value:\", p_value)\n",
+    "if p_value < 0.05:\n",
+    "    print(\"There is a significant difference in wait times between different seasons.\")\n",
+    "else:\n",
+    "    print(\"There is no significant difference in wait times between different seasons.\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Step 3.3: ANOVA for Day vs Night\n",
+    "day_wait_times = df[df['day_or_night'] == 'Day']['wait_time_minutes']\n",
+    "night_wait_times = df[df['day_or_night'] == 'Night']['wait_time_minutes']\n",
+    "\n",
+    "f_stat, p_value = f_oneway(day_wait_times, night_wait_times)\n",
+    "print(\"ANOVA Test for Day vs Night:\")\n",
+    "print(\"F-Statistic:\", f_stat)\n",
+    "print(\"P-Value:\", p_value)\n",
+    "if p_value < 0.05:\n",
+    "    print(\"There is a significant difference in wait times between day and night.\")\n",
+    "else:\n",
+    "    print(\"There is no significant difference in wait times between day and night.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
