code refactor, and added busier times to the data eg. summer

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from scipy.stats import ttest_ind, f_oneway"
    ]
   },
   {
@@ -82,22 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the appropriate length of time series\n",
+    "# Expanded the sine wave pattern to match the total number of data points in hours\n",
     "number_of_days = len(idx) / 24\n",
-    "multiplier = (number_of_days * 2) - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expand the sine wave pattern to match the total number of data points in hours\n",
+    "multiplier = (number_of_days * 2) - 1\n",
     "x_extended = np.linspace(-np.pi, multiplier * np.pi, len(idx))\n",
     "wait_time_means = (np.sin(x_extended) * (mean_wait_time / 3)) + mean_wait_time"
    ]
@@ -208,7 +200,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust Wait Times for Weekends, Summer, and Winter\n",
+    "def adjust_wait_times(row):\n",
+    "    wait_time = row['wait_time_minutes']\n",
+    "\n",
+    "    # Increase wait times by 20% for weekends\n",
+    "    if row['day_of_week'] in ['Saturday', 'Sunday']:\n",
+    "        wait_time *= 1.2\n",
+    "\n",
+    "    # Increase wait times by 15% for Summer and Winter\n",
+    "    if row['season'] in ['Summer', 'Winter']:\n",
+    "        wait_time *= 1.15\n",
+    "\n",
+    "    return wait_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the adjustment function to create a new column with adjusted wait times\n",
+    "df['adjusted_wait_time_minutes'] = df.apply(adjust_wait_times, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -401,29 +424,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-Test Full Moon vs Non-Full Moon:\n",
-      "T-Statistic: 0.47566830013423883\n",
-      "P-Value: 0.63766865839192\n",
-      "There is no significant difference in wait times between full moon and non-full moon days.\n",
+      "T-Test Full Moon vs Non-Full Moon (Adjusted Wait Times):\n",
+      "T-Statistic: -0.20491228723922925\n",
+      "P-Value: 0.8389127037136193\n",
+      "There is no significant difference in adjusted wait times between full moon and non-full moon days.\n",
       "\n",
       "\n",
-      "ANOVA Test for Seasons:\n",
+      "ANOVA Test for Seasons (Adjusted Wait Times):\n",
       "F-Statistic: nan\n",
       "P-Value: nan\n",
-      "There is no significant difference in wait times between different seasons.\n",
+      "There is no significant difference in adjusted wait times between different seasons.\n",
       "\n",
       "\n",
-      "ANOVA Test for Day vs Night:\n",
-      "F-Statistic: 3.288590046835575\n",
-      "P-Value: 0.07185980308945802\n",
-      "There is no significant difference in wait times between day and night.\n"
+      "ANOVA Test for Day vs Night (Adjusted Wait Times):\n",
+      "F-Statistic: 2.644904406492912\n",
+      "P-Value: 0.10608410103830973\n",
+      "There is no significant difference in adjusted wait times between day and night.\n"
      ]
     },
     {
@@ -436,50 +459,48 @@
     }
    ],
    "source": [
-    "from scipy.stats import ttest_ind, f_oneway\n",
-    "\n",
-    "# Step 3.1: T-Test for Full Moon vs Non-Full Moon\n",
-    "full_moon_wait_times = df[df['is_full_moon'] == 1]['wait_time_minutes']\n",
-    "non_full_moon_wait_times = df[df['is_full_moon'] == 0]['wait_time_minutes']\n",
+    "# Step 3.1: T-Test for Full Moon vs Non-Full Moon (using adjusted wait times)\n",
+    "full_moon_wait_times = df[df['is_full_moon'] == 1]['adjusted_wait_time_minutes']\n",
+    "non_full_moon_wait_times = df[df['is_full_moon'] == 0]['adjusted_wait_time_minutes']\n",
     "\n",
     "t_stat, p_value = ttest_ind(full_moon_wait_times, non_full_moon_wait_times, equal_var=False)\n",
-    "print(\"T-Test Full Moon vs Non-Full Moon:\")\n",
+    "print(\"T-Test Full Moon vs Non-Full Moon (Adjusted Wait Times):\")\n",
     "print(\"T-Statistic:\", t_stat)\n",
     "print(\"P-Value:\", p_value)\n",
     "if p_value < 0.05:\n",
-    "    print(\"There is a significant difference in wait times between full moon and non-full moon days.\")\n",
+    "    print(\"There is a significant difference in adjusted wait times between full moon and non-full moon days.\")\n",
     "else:\n",
-    "    print(\"There is no significant difference in wait times between full moon and non-full moon days.\")\n",
+    "    print(\"There is no significant difference in adjusted wait times between full moon and non-full moon days.\")\n",
     "print(\"\\n\")\n",
     "\n",
-    "# Step 3.2: ANOVA for Season Comparison\n",
-    "winter_wait_times = df[df['season'] == 'Winter']['wait_time_minutes']\n",
-    "spring_wait_times = df[df['season'] == 'Spring']['wait_time_minutes']\n",
-    "summer_wait_times = df[df['season'] == 'Summer']['wait_time_minutes']\n",
-    "autumn_wait_times = df[df['season'] == 'Autumn']['wait_time_minutes']\n",
+    "# Step 3.2: ANOVA for Season Comparison (using adjusted wait times)\n",
+    "winter_wait_times = df[df['season'] == 'Winter']['adjusted_wait_time_minutes']\n",
+    "spring_wait_times = df[df['season'] == 'Spring']['adjusted_wait_time_minutes']\n",
+    "summer_wait_times = df[df['season'] == 'Summer']['adjusted_wait_time_minutes']\n",
+    "autumn_wait_times = df[df['season'] == 'Autumn']['adjusted_wait_time_minutes']\n",
     "\n",
     "f_stat, p_value = f_oneway(winter_wait_times, spring_wait_times, summer_wait_times, autumn_wait_times)\n",
-    "print(\"ANOVA Test for Seasons:\")\n",
+    "print(\"ANOVA Test for Seasons (Adjusted Wait Times):\")\n",
     "print(\"F-Statistic:\", f_stat)\n",
     "print(\"P-Value:\", p_value)\n",
     "if p_value < 0.05:\n",
-    "    print(\"There is a significant difference in wait times between different seasons.\")\n",
+    "    print(\"There is a significant difference in adjusted wait times between different seasons.\")\n",
     "else:\n",
-    "    print(\"There is no significant difference in wait times between different seasons.\")\n",
+    "    print(\"There is no significant difference in adjusted wait times between different seasons.\")\n",
     "print(\"\\n\")\n",
     "\n",
-    "# Step 3.3: ANOVA for Day vs Night\n",
-    "day_wait_times = df[df['day_or_night'] == 'Day']['wait_time_minutes']\n",
-    "night_wait_times = df[df['day_or_night'] == 'Night']['wait_time_minutes']\n",
+    "# Step 3.3: ANOVA for Day vs Night (using adjusted wait times)\n",
+    "day_wait_times = df[df['day_or_night'] == 'Day']['adjusted_wait_time_minutes']\n",
+    "night_wait_times = df[df['day_or_night'] == 'Night']['adjusted_wait_time_minutes']\n",
     "\n",
     "f_stat, p_value = f_oneway(day_wait_times, night_wait_times)\n",
-    "print(\"ANOVA Test for Day vs Night:\")\n",
+    "print(\"ANOVA Test for Day vs Night (Adjusted Wait Times):\")\n",
     "print(\"F-Statistic:\", f_stat)\n",
     "print(\"P-Value:\", p_value)\n",
     "if p_value < 0.05:\n",
-    "    print(\"There is a significant difference in wait times between day and night.\")\n",
+    "    print(\"There is a significant difference in adjusted wait times between day and night.\")\n",
     "else:\n",
-    "    print(\"There is no significant difference in wait times between day and night.\")\n"
+    "    print(\"There is no significant difference in adjusted wait times between day and night.\")"
    ]
   },
   {
