--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -111,13 +111,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to fetch weather data for timestamp 1672574400. Status code: 401\n",
+      "Failed to fetch weather data for timestamp 1672660800. Status code: 401\n",
+      "Failed to fetch weather data for timestamp 1672747200. Status code: 401\n",
+      "Failed to fetch weather data for timestamp 1672833600. Status code: 401\n",
+      "Failed to fetch weather data for timestamp 1672920000. Status code: 401\n",
+      "Failed to fetch weather data for timestamp 1673006400. Status code: 401\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[115], line 74\u001b[0m\n\u001b[1;32m     71\u001b[0m             temp, humidity, condition \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# Handle missing data\u001b[39;00m\n\u001b[1;32m     73\u001b[0m         \u001b[38;5;66;03m# Add a delay to avoid API rate limits\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 1-second delay between requests to respect rate limits\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     weather_features\u001b[38;5;241m.\u001b[39mappend([temp, humidity, condition])\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# Create a DataFrame with weather data\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "# OpenWeatherMap API key\n",
-    "API_KEY = '6813d94f40db0df4a821342ae58f5067'\n",
-    "BASE_URL = 'https://api.openweathermap.org/data/2.5/onecall/timemachine'\n",
+    "# OpenWeatherMap API key \n",
+    "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
+    "BASE_URL = 'https://api.openweathermap.org/data/2.5/weather'\n",
     "latitude = 53.2707  # Galway latitude\n",
     "longitude = -9.0568  # Galway longitude\n",
+    "\n",
+    "# Check if the API key is loaded correctly\n",
+    "if not API_KEY:\n",
+    "    raise ValueError(\"API key not found. Please set the OPENWEATHER_API_KEY environment variable.\")\n",
     "\n",
     "# Set up the date range for the year (daily frequency)\n",
     "idx = pd.date_range(start='2023-01-01', end='2023-12-31', freq=\"D\")\n",
@@ -131,12 +159,11 @@
     "else:\n",
     "    weather_cache = pd.DataFrame(columns=['temperature', 'humidity', 'weather_condition'])\n",
     "\n",
-    "# Function to fetch weather data for a given UNIX timestamp\n",
-    "def get_weather_data(lat, lon, timestamp):\n",
+    "# Function to fetch weather data for a given city (current weather)\n",
+    "def get_weather_data(lat, lon):\n",
     "    params = {\n",
     "        'lat': lat,\n",
     "        'lon': lon,\n",
-    "        'dt': timestamp,\n",
     "        'appid': API_KEY,\n",
     "        'units': 'metric'\n",
     "    }\n",
@@ -145,7 +172,7 @@
     "        data = response.json()\n",
     "        return data\n",
     "    else:\n",
-    "        print(f\"Failed to fetch weather data for timestamp {timestamp}. Status code: {response.status_code}\")\n",
+    "        print(f\"Failed to fetch weather data. Status code: {response.status_code}\")\n",
     "        return None\n",
     "\n",
     "# Loop through each day to fetch weather data\n",
@@ -159,17 +186,14 @@
     "        humidity = weather_cache.loc[day, 'humidity']\n",
     "        condition = weather_cache.loc[day, 'weather_condition']\n",
     "    else:\n",
-    "        # Convert day to UNIX format (using midday to represent daily average)\n",
-    "        timestamp_unix = int(time.mktime((day + timedelta(hours=12)).timetuple()))\n",
-    "\n",
-    "        # Get weather data for the given day\n",
-    "        weather_data = get_weather_data(latitude, longitude, timestamp_unix)\n",
+    "        # Get weather data for the given location (use current weather)\n",
+    "        weather_data = get_weather_data(latitude, longitude)\n",
     "\n",
     "        if weather_data:\n",
-    "            # Extract temperature, humidity, and weather condition for the day\n",
-    "            temp = weather_data['current']['temp']\n",
-    "            humidity = weather_data['current']['humidity']\n",
-    "            condition = weather_data['current']['weather'][0]['main']\n",
+    "            # Extract temperature, humidity, and weather condition\n",
+    "            temp = weather_data['main']['temp']\n",
+    "            humidity = weather_data['main']['humidity']\n",
+    "            condition = weather_data['weather'][0]['main']\n",
     "\n",
     "            # Add the new data to the cache DataFrame\n",
     "            new_data = pd.DataFrame({\n",
@@ -203,7 +227,7 @@
     "print(df.head())\n",
     "\n",
     "# Save to CSV for future use\n",
-    "df.to_csv('wait_times_with_weather.csv', index=True)"
+    "df.to_csv('wait_times_with_weather.csv', index=True)\n"
    ]
   },
   {
