added viduals for weather data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import seaborn as sns\n",
     "from datetime import datetime, timedelta\n",
     "from scipy.stats import ttest_ind, f_oneway\n",
-    "import time\n"
+    "import time\n",
+    "from dotenv import load_dotenv\n"
    ]
   },
   {
@@ -111,31 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to fetch weather data for timestamp 1672574400. Status code: 401\n",
-      "Failed to fetch weather data for timestamp 1672660800. Status code: 401\n",
-      "Failed to fetch weather data for timestamp 1672747200. Status code: 401\n",
-      "Failed to fetch weather data for timestamp 1672833600. Status code: 401\n",
-      "Failed to fetch weather data for timestamp 1672920000. Status code: 401\n",
-      "Failed to fetch weather data for timestamp 1673006400. Status code: 401\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[115], line 74\u001b[0m\n\u001b[1;32m     71\u001b[0m             temp, humidity, condition \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# Handle missing data\u001b[39;00m\n\u001b[1;32m     73\u001b[0m         \u001b[38;5;66;03m# Add a delay to avoid API rate limits\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 1-second delay between requests to respect rate limits\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     weather_features\u001b[38;5;241m.\u001b[39mappend([temp, humidity, condition])\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# Create a DataFrame with weather data\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# OpenWeatherMap API key \n",
     "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
@@ -143,7 +120,10 @@
     "latitude = 53.2707  # Galway latitude\n",
     "longitude = -9.0568  # Galway longitude\n",
     "\n",
-    "# Check if the API key is loaded correctly\n",
+    "print(f\"API Key: {API_KEY}\")  # This should print your key (only for debugging; avoid printing it in production)\n",
+    "\n",
+    "load_dotenv()  # Load variables from the .env file\n",
+    "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
     "if not API_KEY:\n",
     "    raise ValueError(\"API key not found. Please set the OPENWEATHER_API_KEY environment variable.\")\n",
     "\n",
@@ -227,7 +207,27 @@
     "print(df.head())\n",
     "\n",
     "# Save to CSV for future use\n",
-    "df.to_csv('wait_times_with_weather.csv', index=True)\n"
+    "df.to_csv('wait_times_with_weather.csv', index=True)\n",
+    "\n",
+    "# plotting code here\n",
+    "df['temperature'].plot(title='Temperature Over Time')\n",
+    "plt.show()\n",
+    "df['humidity'].plot(title='Humidity Over Time')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the temperature trend over time\n",
+    "df['temperature'].plot(title='Temperature Over Time')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Temperature (°C)')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the humidity trend over time\n",
+    "df['humidity'].plot(title='Humidity Over Time', color='orange')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Humidity (%)')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
    ]
   },
   {
