slight adjustments to weather updates, removed duplicate api call

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -114,32 +114,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OpenWeatherMap API key \n",
-    "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
-    "BASE_URL = 'https://api.openweathermap.org/data/2.5/weather'\n",
-    "latitude = 53.2707  # Galway latitude\n",
-    "longitude = -9.0568  # Galway longitude\n",
-    "\n",
-    "print(f\"API Key: {API_KEY}\")  # This should print your key (only for debugging; avoid printing it in production)\n",
-    "\n",
-    "load_dotenv()  # Load variables from the .env file\n",
+    "# Load environment variables from the .env file\n",
+    "load_dotenv()\n",
     "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
     "if not API_KEY:\n",
     "    raise ValueError(\"API key not found. Please set the OPENWEATHER_API_KEY environment variable.\")\n",
     "\n",
-    "# Set up the date range for the year (daily frequency)\n",
+    "# Constants\n",
+    "BASE_URL = 'https://api.openweathermap.org/data/2.5/weather'\n",
+    "latitude = 53.2707  # Galway latitude\n",
+    "longitude = -9.0568  # Galway longitude\n",
+    "\n",
+    "# Set up the date range (daily frequency)\n",
     "idx = pd.date_range(start='2023-01-01', end='2023-12-31', freq=\"D\")\n",
     "\n",
     "# CSV cache file to save weather data\n",
     "csv_cache_filename = 'weather_cache_daily.csv'\n",
     "\n",
-    "# Load CSV cache if exists\n",
+    "# Load CSV cache if it exists, otherwise create an empty DataFrame\n",
     "if os.path.exists(csv_cache_filename):\n",
     "    weather_cache = pd.read_csv(csv_cache_filename, index_col='date', parse_dates=True)\n",
+    "    print(f\"Loaded cached weather data from {csv_cache_filename}.\")\n",
     "else:\n",
     "    weather_cache = pd.DataFrame(columns=['temperature', 'humidity', 'weather_condition'])\n",
+    "    print(\"No cache found. Starting fresh.\")\n",
     "\n",
-    "# Function to fetch weather data for a given city (current weather)\n",
+    "# Function to fetch weather data for a given latitude and longitude\n",
     "def get_weather_data(lat, lon):\n",
     "    params = {\n",
     "        'lat': lat,\n",
@@ -150,9 +150,14 @@
     "    response = requests.get(BASE_URL, params=params)\n",
     "    if response.status_code == 200:\n",
     "        data = response.json()\n",
-    "        return data\n",
+    "        # Ensure required keys exist\n",
+    "        if 'main' in data and 'weather' in data:\n",
+    "            return data\n",
+    "        else:\n",
+    "            print(f\"Invalid data structure received: {data}\")\n",
+    "            return None\n",
     "    else:\n",
-    "        print(f\"Failed to fetch weather data. Status code: {response.status_code}\")\n",
+    "        print(f\"Failed to fetch weather data. Status code: {response.status_code}, Response: {response.text}\")\n",
     "        return None\n",
     "\n",
     "# Loop through each day to fetch weather data\n",
@@ -166,68 +171,66 @@
     "        humidity = weather_cache.loc[day, 'humidity']\n",
     "        condition = weather_cache.loc[day, 'weather_condition']\n",
     "    else:\n",
-    "        # Get weather data for the given location (use current weather)\n",
+    "        # Fetch data from the API\n",
     "        weather_data = get_weather_data(latitude, longitude)\n",
     "\n",
     "        if weather_data:\n",
-    "            # Extract temperature, humidity, and weather condition\n",
-    "            temp = weather_data['main']['temp']\n",
-    "            humidity = weather_data['main']['humidity']\n",
-    "            condition = weather_data['weather'][0]['main']\n",
+    "            # Extract relevant data\n",
+    "            temp = weather_data['main'].get('temp')\n",
+    "            humidity = weather_data['main'].get('humidity')\n",
+    "            condition = weather_data['weather'][0].get('main', 'Unknown')\n",
     "\n",
-    "            # Add the new data to the cache DataFrame\n",
+    "            # Add to the cache\n",
     "            new_data = pd.DataFrame({\n",
     "                'temperature': [temp],\n",
     "                'humidity': [humidity],\n",
     "                'weather_condition': [condition]\n",
     "            }, index=[day])\n",
-    "            \n",
-    "            # Only concatenate if new_data is not empty\n",
-    "            if not new_data.empty:\n",
-    "                weather_cache = pd.concat([weather_cache, new_data])\n",
-    "\n",
+    "            weather_cache = pd.concat([weather_cache, new_data])\n",
     "        else:\n",
     "            temp, humidity, condition = None, None, None  # Handle missing data\n",
     "\n",
     "        # Add a delay to avoid API rate limits\n",
-    "        time.sleep(1)  # 1-second delay between requests to respect rate limits\n",
+    "        time.sleep(1)\n",
     "\n",
+    "    # Append to features list\n",
     "    weather_features.append([temp, humidity, condition])\n",
+    "\n",
+    "# Save updated cache\n",
+    "weather_cache.to_csv(csv_cache_filename)\n",
+    "print(f\"Updated cache saved to {csv_cache_filename}.\")\n",
     "\n",
     "# Create a DataFrame with weather data\n",
     "weather_df = pd.DataFrame(weather_features, columns=['temperature', 'humidity', 'weather_condition'], index=idx)\n",
     "\n",
-    "# Merge weather data with your existing dataset\n",
-    "df = pd.concat([df, weather_df.reindex(df.index, method='ffill')], axis=1)\n",
+    "# For demonstration: Preview the weather DataFrame\n",
+    "print(\"\\nWeather DataFrame Preview:\")\n",
+    "print(weather_df.head())\n",
     "\n",
-    "# Save cache to CSV for future use\n",
-    "weather_cache.to_csv(csv_cache_filename)\n",
-    "\n",
-    "# Preview the updated DataFrame\n",
-    "print(df.head())\n",
-    "\n",
-    "# Save to CSV for future use\n",
-    "df.to_csv('wait_times_with_weather.csv', index=True)\n",
-    "\n",
-    "# plotting code here\n",
-    "df['temperature'].plot(title='Temperature Over Time')\n",
-    "plt.show()\n",
-    "df['humidity'].plot(title='Humidity Over Time')\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot the temperature trend over time\n",
-    "df['temperature'].plot(title='Temperature Over Time')\n",
-    "plt.xlabel('Time')\n",
+    "# Visualization: Plot temperature and humidity trends\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "weather_df['temperature'].plot(title='Temperature Over Time', label='Temperature')\n",
+    "plt.xlabel('Date')\n",
     "plt.ylabel('Temperature (°C)')\n",
     "plt.grid(True)\n",
+    "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "# Plot the humidity trend over time\n",
-    "df['humidity'].plot(title='Humidity Over Time', color='orange')\n",
-    "plt.xlabel('Time')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "weather_df['humidity'].plot(title='Humidity Over Time', label='Humidity', color='orange')\n",
+    "plt.xlabel('Date')\n",
     "plt.ylabel('Humidity (%)')\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(\"\\nChecking for missing values in weather data:\")\n",
+    "print(weather_df.isnull().sum())\n",
+    "\n",
+    "# Save final weather data for further analysis\n",
+    "weather_df.to_csv('final_weather_data.csv')\n",
+    "print(\"Final weather data saved to 'final_weather_data.csv'.\")\n"
    ]
   },
   {
