imported read data from NHS website

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "from datetime import datetime, timedelta\n",
     "from scipy.stats import ttest_ind, f_oneway\n",
     "import time\n",
-    "from dotenv import load_dotenv\n"
+    "from dotenv import load_dotenv\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,10 +111,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No cache found. Starting fresh.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching Weather Data:   0%|          | 0/365 [00:00<?, ?it/s]/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_49748/687304698.py:85: FutureWarning: The behavior of array concatenation with empty entries is deprecated. In a future version, this will no longer exclude empty items when determining the result dtype. To retain the old behavior, exclude the empty entries before the concat operation.\n",
+      "  weather_cache = pd.concat([weather_cache, new_data], ignore_index=False)\n",
+      "/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_49748/687304698.py:85: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  weather_cache = pd.concat([weather_cache, new_data], ignore_index=False)\n",
+      "Fetching Weather Data: 100%|██████████| 365/365 [07:40<00:00,  1.26s/it]\n"
+     ]
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime, timedelta\n",
+    "import time\n",
+    "from dotenv import load_dotenv\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "# Load environment variables from the .env file\n",
     "load_dotenv()\n",
     "API_KEY = os.getenv('OPENWEATHER_API_KEY')\n",
@@ -163,7 +193,8 @@
     "# Loop through each day to fetch weather data\n",
     "weather_features = []\n",
     "\n",
-    "for day in idx:\n",
+    "# Use tqdm for a progress bar\n",
+    "for day in tqdm(idx, desc=\"Fetching Weather Data\"):\n",
     "    # Check if data for this day is already in cache\n",
     "    if day in weather_cache.index:\n",
     "        # Fetch from cache\n",
@@ -186,7 +217,8 @@
     "                'humidity': [humidity],\n",
     "                'weather_condition': [condition]\n",
     "            }, index=[day])\n",
-    "            weather_cache = pd.concat([weather_cache, new_data])\n",
+    "            if not new_data.empty:\n",
+    "                weather_cache = pd.concat([weather_cache, new_data], ignore_index=False)\n",
     "        else:\n",
     "            temp, humidity, condition = None, None, None  # Handle missing data\n",
     "\n",
@@ -194,44 +226,15 @@
     "        time.sleep(1)\n",
     "\n",
     "    # Append to features list\n",
-    "    weather_features.append([temp, humidity, condition])\n",
-    "\n",
-    "# Save updated cache\n",
-    "weather_cache.to_csv(csv_cache_filename)\n",
-    "print(f\"Updated cache saved to {csv_cache_filename}.\")\n",
-    "\n",
-    "# Create a DataFrame with weather data\n",
-    "weather_df = pd.DataFrame(weather_features, columns=['temperature', 'humidity', 'weather_condition'], index=idx)\n",
-    "\n",
-    "# For demonstration: Preview the weather DataFrame\n",
-    "print(\"\\nWeather DataFrame Preview:\")\n",
-    "print(weather_df.head())\n",
-    "\n",
-    "# Visualization: Plot temperature and humidity trends\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "weather_df['temperature'].plot(title='Temperature Over Time', label='Temperature')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Temperature (°C)')\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "weather_df['humidity'].plot(title='Humidity Over Time', label='Humidity', color='orange')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Humidity (%)')\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "# Check for missing values\n",
-    "print(\"\\nChecking for missing values in weather data:\")\n",
-    "print(weather_df.isnull().sum())\n",
-    "\n",
-    "# Save final weather data for further analysis\n",
-    "weather_df.to_csv('final_weather_data.csv')\n",
-    "print(\"Final weather data saved to 'final_weather_data.csv'.\")\n"
+    "    weather_features.append\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -670,8 +673,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Real Data Preview:\n",
+      "   Unnamed: 0 Unnamed: 1                                         Unnamed: 2  \\\n",
+      "0         NaN     Title:  A&E Attendances & Emergency Admission monthly ...   \n",
+      "1         NaN        NaN                                                NaN   \n",
+      "2         NaN   Summary:  A&E attendances, performance and emergency adm...   \n",
+      "3         NaN        NaN                                                NaN   \n",
+      "4         NaN    Period:                                      December 2024   \n",
+      "\n",
+      "  Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8  \\\n",
+      "0        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "1        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "2        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "3        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "4        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "\n",
+      "  Unnamed: 9  ... Unnamed: 17 Unnamed: 18 Unnamed: 19 Unnamed: 20 Unnamed: 21  \\\n",
+      "0        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "1        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "2        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "3        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "4        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "\n",
+      "  Unnamed: 22 Unnamed: 23 Unnamed: 24 Unnamed: 25 Unnamed: 26  \n",
+      "0         NaN         NaN         NaN         NaN         NaN  \n",
+      "1         NaN         NaN         NaN         NaN         NaN  \n",
+      "2         NaN         NaN         NaN         NaN         NaN  \n",
+      "3         NaN         NaN         NaN         NaN         NaN  \n",
+      "4         NaN         NaN         NaN         NaN         NaN  \n",
+      "\n",
+      "[5 rows x 27 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# import hospital data\n",
+    "real_file_path = '../data/december_2024_ae_data.xls'\n",
+    "\n",
+    "# Read the Excel file\n",
+    "real_data = pd.read_excel(real_file_path, engine='xlrd')\n",
+    "\n",
+    "# Preview the data\n",
+    "print(\"\\nReal Data Preview:\")\n",
+    "print(real_data.head())\n"
+   ]
   }
  ],
  "metadata": {
